# AGDownloader

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  profile.json
.github/workflows/: binary.yml  go.yml  goreleaser.yml
cookies/: cookie.go  cookie_to_token.go
courses/: courses.go  courses_test.go
download/: download.go
errorlog/: errorlog.go
files/: files.go
functions/: files.go  parsers.go
parser/: course.go
prog_args/: args_beautiful.go  local_token.go  prog_args.go  token_asker.go
src/: cookies.rs  courses.rs  main.rs  resource.rs
token/: token.go
types/: types.go  webstructs.go
user/: user.go
webUI/: constants.go  cookie-webUI.go  courses-webUI.go
