[package]
name = "AGDown"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = "0.34.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
flate2 = "1.0"
tar = "0.4"
indicatif = "0.17.9"
clap = {version = "4.5.21", features = ["derive"]}
html = "0.6.3"
scraper = "0.21.0"
percent-encoding = "2.3.1"
